# FOIL-Prototype

./: .gitignore  CMakeLists.txt  afbdd.txt  collab.ipynb  exp.py  experiments.sh  hle.py  input.txt  invLexer.g4  invParser.g4  naive.cpp  query_example.txt  readme.md  student_user_friendly_queries.py
.ipynb_checkpoints/: collab-checkpoint.ipynb
dtrees/: CMakeLists.txt  DTNode.h  DecisionTree.h  dim_100_nleaves_100.json  dim_100_nleaves_1000.json  dim_100_nleaves_500.json  dim_10_nleaves_10.json  dim_10_nleaves_100.json  dim_10_nleaves_1000.json  dim_10_nleaves_15.json  dim_10_nleaves_150.json  dim_10_nleaves_20.json  dim_10_nleaves_200.json  dim_10_nleaves_2000.json  dim_10_nleaves_5.json  dim_10_nleaves_50.json  dim_10_nleaves_500.json  dim_150_nleaves_100.json  dim_150_nleaves_1000.json  dim_150_nleaves_500.json  dim_15_nleaves_10.json  dim_15_nleaves_100.json  dim_15_nleaves_1000.json  dim_15_nleaves_15.json  dim_15_nleaves_150.json  dim_15_nleaves_20.json  dim_15_nleaves_200.json  dim_15_nleaves_2000.json  dim_15_nleaves_5.json  dim_15_nleaves_50.json  dim_15_nleaves_500.json  dim_200_nleaves_100.json  dim_200_nleaves_1000.json  dim_200_nleaves_500.json  dim_20_nleaves_10.json  dim_20_nleaves_100.json  dim_20_nleaves_1000.json  dim_20_nleaves_15.json  dim_20_nleaves_150.json  dim_20_nleaves_20.json  (+70 more)
src/: AFBDD.cpp  AFBDDNode.cpp  CMakeLists.txt  DTNode.cpp  DTtest.cpp  DecisionTree.cpp  FBDD.cpp  FBDDsub.cpp  FNode.cpp  dttest.cpp  errorListener.cpp  fastpow.cpp  fbddtest.cpp  generator.cpp  greedyVisitor.cpp  main.cpp  main2.cpp  paperalgo.cpp  paperalgofull.cpp  perceptron.cpp  queryChecker.cpp  queryChecker2.cpp  queryChecker3.cpp  subtest.cpp
(+36 files in other folders)
